fixed persona spacing on mobile

--- a/styles/pointpoint.css
+++ b/styles/pointpoint.css
@@ -279,9 +279,11 @@ p{
     }
         
     .persona-overview { grid-area: 1 / 1 / 2 / 2; }
+
     .persona-deets { 
         grid-area: 2 / 1 / 3 / 2; 
         grid-row-gap: 5px;
+        grid-column-gap: 15px;
         margin:0;
         /* padding-right: 12px;
         padding-left: 12px; */
